# cpp-magic_enum-example

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql-analysis.yml
docs/: index.md
examples/: CMakeLists.txt  basic.cpp  custom_name.cpp
